--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_auth: ^5.3.3 
-  firebase_core: ^3.8.0 
+  firebase_core: ^3.9.0 
   firebase_storage: ^12.3.6 
   cloud_firestore: ^5.5.0
   provider: ^6.0.5
@@ -35,6 +35,17 @@ dependencies:
   flutter_math_fork: ^0.7.2
   math_keyboard: ^0.3.1
   flutter_tex: ^4.0.9
+  rename: ^3.0.2
+  flutter_launcher_icons: ^0.14.2
+
+flutter_launcher_icons:
+    android: "launcher_icon"
+    ios: true
+    remove_alpha_ios: true
+    image_path: "assets/logo/logo.png"
+    min_sdk_android: 24 # android min sdk min:16, default 21
+    adaptive_icon_background: "#ffffff" # You can use a color or image for the background
+    adaptive_icon_foreground: "assets/logo/logo.png" # For adaptive icons on Android
 
 
 dev_dependencies:
